--- a/app/order-detail.component.html
+++ b/app/order-detail.component.html
@@ -9,17 +9,8 @@
          Quantity
          <span class="detail">
             <div class="selectmenu detailSelect">
-               <select name="quantity">
-                  <option value="1" selected="selected">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
+               <select name="quantity" [ngModel]="currentOrder.quantity" (ngModelChange)="onQuantityChange($event)" >
+                  <option [value]="i" *ngFor="let i of currentOrder.MaxCount">{{i}}</option>
                </select>
             </div>
             x ${{currentOrder.price}}
@@ -27,7 +18,7 @@
       </li>
       <li>
          Subtotal
-         <span class="detail" id="order_total">        ${{currentOrder.subtotal()}}			</span>
+         <span class="detail" id="order_total">${{currentOrder.subtotal()}}</span>
       </li>
    </ul>
 </div>
