+ add routing + add new page for service_address

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -26,16 +26,10 @@
          &amp;lt;/p&amp;gt;
          &amp;lt;/div&amp;gt;
       </noscript>
-      <div class="wrapper flush order_step">
-         <div class="wrapperSection">
-            <h2 class="mainHeader">Create your Ting account</h2>
-            <p class="tagline">
-               Already have an account?
-               <button class="trigger" type="button" id="signinTrigger">Sign in instead.</button>
-            </p>
-            <tingcom-form-signup></tingcom-form-signup>
-         </div>
-      </div>
+      
+      <!--// TODO: mail content-->
+      <router-outlet></router-outlet>
+
       <tingcom-order-detail></tingcom-order-detail>
       <div class="clear"></div>
       <!-- mainBlock - end -->
