--- a/app/order-service-address.component.html
+++ b/app/order-service-address.component.html
@@ -42,85 +42,7 @@
       <h3>Service address</h3>
       <p>Your service address will allow us to determine if your area is serviceable by our network.</p>
       <div id="error" style="display: none;"></div>
-      <form action="https://ting.com/order/service_address" method="POST" id="form-service_address">
-         <input type="hidden" name="__form_post_data_namespace_id" value="order.service_address">
-         <fieldset>
-            <div class="fieldgroup fullWide">
-               <label for="address">Address</label>
-               <input type="text" name="address" class="required" value="">
-            </div>
-            <div class="clear"></div>
-            <div class="fieldgroup fullWide">
-               <label for="city">City</label>
-               <input type="text" name="city" class="required" value="">
-            </div>
-            <div class="clear"></div>
-            <div class="fieldgroup halfWide">
-               <label for="state">State</label>
-               <div class="selectmenu">
-                  <select id="state" name="state">
-                     <option value="AL">Alabama</option>
-                     <option value="AK">Alaska</option>
-                     <option value="AZ">Arizona</option>
-                     <option value="AR">Arkansas</option>
-                     <option value="CA">California</option>
-                     <option value="CO">Colorado</option>
-                     <option value="CT">Connecticut</option>
-                     <option value="DE">Delaware</option>
-                     <option value="DC">District of Columbia</option>
-                     <option value="FL">Florida</option>
-                     <option value="GA">Georgia</option>
-                     <option value="HI">Hawaii</option>
-                     <option value="ID">Idaho</option>
-                     <option value="IL">Illinois</option>
-                     <option value="IN">Indiana</option>
-                     <option value="IA">Iowa</option>
-                     <option value="KS">Kansas</option>
-                     <option value="KY">Kentucky</option>
-                     <option value="LA">Louisiana</option>
-                     <option value="ME">Maine</option>
-                     <option value="MD">Maryland</option>
-                     <option value="MA">Massachusetts</option>
-                     <option value="MI">Michigan</option>
-                     <option value="MN">Minnesota</option>
-                     <option value="MS">Mississippi</option>
-                     <option value="MO">Missouri</option>
-                     <option value="MT">Montana</option>
-                     <option value="NE">Nebraska</option>
-                     <option value="NV">Nevada</option>
-                     <option value="NH">New Hampshire</option>
-                     <option value="NJ">New Jersey</option>
-                     <option value="NM">New Mexico</option>
-                     <option value="NY">New York</option>
-                     <option value="NC">North Carolina</option>
-                     <option value="ND">North Dakota</option>
-                     <option value="OH">Ohio</option>
-                     <option value="OK">Oklahoma</option>
-                     <option value="OR">Oregon</option>
-                     <option value="PA">Pennsylvania</option>
-                     <option value="RI">Rhode Island</option>
-                     <option value="SC">South Carolina</option>
-                     <option value="SD">South Dakota</option>
-                     <option value="TN">Tennessee</option>
-                     <option value="TX">Texas</option>
-                     <option value="UT">Utah</option>
-                     <option value="VT">Vermont</option>
-                     <option value="VA">Virginia</option>
-                     <option value="WA">Washington</option>
-                     <option value="WV">West Virginia</option>
-                     <option value="WI">Wisconsin</option>
-                     <option value="WY">Wyoming</option>
-                  </select>
-               </div>
-            </div>
-            <div class="fieldgroup halfWide">
-               <label for="postal_code">Zip code</label>
-               <input type="text" name="postal_code" class="required" value="">
-            </div>
-         </fieldset>
-         <div class="buttons">
-            <button type="submit" name="done" class="enabledSubmit">Next step</button>
-         </div>
-      </form>
+
+      <dynamic-form [controls]="controls" [submittext]="'Next step'"></dynamic-form>
    </div>
 </div>
