--- a/app/dynamic-form-control.component.html
+++ b/app/dynamic-form-control.component.html
@@ -8,7 +8,7 @@
        </label>
    </div>
 
-  <div [ngSwitch]="control.controlType" [ngClass]="{halfWide: !control.fullWide, fullWide: control.fullWide, inline:control.fullWide}" class="fieldgroup sign-up">
+  <div [ngSwitch]="control.controlType" [ngClass]="{halfWide: !control.fullWide, fullWide: control.fullWide, inline:(control.fullWide && control.controlType == 'checkboxgroup')}" class="fieldgroup sign-up">
     
     <label *ngIf="control.controlType == 'checkbox'" >
         <input *ngSwitchCase="'checkbox'"  [formControlName]="control.key"
@@ -16,14 +16,15 @@
         {{control.label}}
     </label>
     
-    <label *ngIf="control.controlType == 'textbox'" [attr.for]="control.key">{{control.label}}</label>
+    <label *ngIf="control.controlType == 'textbox' || control.controlType == 'dropdown'" [attr.for]="control.key">{{control.label}}</label>
 
-    <input *ngSwitchCase="'textbox'"  [formControlName]="control.key"
-            [id]="control.key" [type]="control.type">
+    <input *ngSwitchCase="'textbox'" [ngClass]="{required: control.required}" [formControlName]="control.key" [id]="control.key" [type]="control.type">
 
-    <select *ngSwitchCase="'dropdown'" [id]="control.key" [formControlName]="control.key">
-      <option *ngFor="let opt of control.options" [value]="opt.key">{{opt.value}}</option>
-    </select>
+    <div *ngSwitchCase="'dropdown'" class="selectmenu">
+        <select [id]="control.key" [formControlName]="control.key">
+            <option *ngFor="let opt of control.options" [value]="opt.key">{{opt.value}}</option>
+        </select>
+    </div>
 
     <div *ngIf="!isValid && formSubmited" id="advice-required-input_first_name" class="validation-advice" style="display: block;">This field is required.</div>
   </div> 
