--- a/app/dynamic-form-control.component.html
+++ b/app/dynamic-form-control.component.html
@@ -26,7 +26,9 @@
         </select>
     </div>
 
-    <div *ngIf="!isValid && formSubmited" id="advice-required-input_first_name" class="validation-advice" style="display: block;">This field is required.</div>
+    <div *ngIf="showRequiredError" id="advice-required-input_first_name" class="validation-advice" style="display: block;">This field is required.</div>
+    <div *ngIf="showMinLenghtError" id="advice-required-input_first_name" class="validation-advice" style="display: block;">Your name needs to be at least {{control.minLength}} characters..</div>
+
   </div> 
 </div>
 <div  *ngIf="control.order % 2 === 0" class="clear"></div>
