* chabge error message for min chars

--- a/app/dynamic-form-control.component.html
+++ b/app/dynamic-form-control.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <div *ngIf="showRequiredError" id="advice-required-input_first_name" class="validation-advice" style="display: block;">This field is required.</div>
-    <div *ngIf="showMinLenghtError" id="advice-required-input_first_name" class="validation-advice" style="display: block;">Your name needs to be at least {{control.minLength}} characters..</div>
+    <div *ngIf="showMinLenghtError" id="advice-required-input_first_name" class="validation-advice" style="display: block;">Please enter at least {{control.minLength}} characters.</div>
 
   </div> 
 </div>
