--- a/app/dynamic-form.component.html
+++ b/app/dynamic-form.component.html
@@ -14,3 +14,28 @@
 <div *ngIf="payLoad" class="form-row">
   <strong>Saved the following values</strong><br>{{payLoad}}
 </div>
+
+<modal #modal>
+    <div id="modal-confirmAddress" class="popup flowForm" style="position: absolute; top: 295px; left: 711px;">
+        <span class="close">
+            <button class="closeButton" type="button" (click)="modal.close()">
+                <svg height="16" width="16" role="img" title="Close" class="iconSvg">
+                    <use xlink:href="/static/images/icons.svg#close" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/static/images/icons.svg#close"></use>
+                </svg>
+            </button>
+        </span>
+        <div class="pageheader">
+            <h3>Please confirm your address</h3>
+        </div>
+        <form>
+            <div class="fieldgroup fullWide readonly"><label>Address</label><span class="field">15522 SE 5TH CT</span></div>
+            <div class="fieldgroup fullWide readonly"><label>City</label><span class="field">BELLEVUE</span></div>
+            <div class="fieldgroup fullWide readonly"><label>State</label><span class="field">Washington</span></div>
+            <div class="fieldgroup fullWide readonly"><label>Zip code</label><span class="field">98007-4967</span></div>
+            <div class="buttons">
+                <button type="button" (click)="goBillingnfo()">Confirm</button>
+                <button type="button" name="cancel" (click)="modal.close()">This is not correct</button>
+            </div>
+        </form>
+    </div>
+</modal>
