--- a/app/order-service-address.component.html
+++ b/app/order-service-address.component.html
@@ -43,31 +43,6 @@
       <p>Your service address will allow us to determine if your area is serviceable by our network.</p>
       <div id="error" style="display: none;"></div>
 
-      <dynamic-form [controls]="controls" [submittext]="'Next step'"></dynamic-form>
+      <dynamic-form [controls]="controls" [submittext]="'Next step'" [showmodal]="true"></dynamic-form>
    </div>
 </div>
-
-<modal #modal>
-    <div id="modal-confirmAddress" class="popup flowForm" style="position: absolute; top: 295px; left: 711px;">
-        <span class="close">
-            <button class="closeButton" type="button" (click)="modal.close()">
-                <svg height="16" width="16" role="img" title="Close" class="iconSvg">
-                    <use xlink:href="/static/images/icons.svg#close" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/static/images/icons.svg#close"></use>
-                </svg>
-            </button>
-        </span>
-        <div class="pageheader">
-            <h3>Please confirm your address</h3>
-        </div>
-        <form>
-            <div class="fieldgroup fullWide readonly"><label>Address</label><span class="field">15522 SE 5TH CT</span></div>
-            <div class="fieldgroup fullWide readonly"><label>City</label><span class="field">BELLEVUE</span></div>
-            <div class="fieldgroup fullWide readonly"><label>State</label><span class="field">Washington</span></div>
-            <div class="fieldgroup fullWide readonly"><label>Zip code</label><span class="field">98007-4967</span></div>
-            <div class="buttons">
-                <button type="button" (click)="goBillingnfo()">Confirm</button>
-                <button type="button" name="cancel" (click)="modal.open()">This is not correct</button>
-            </div>
-        </form>
-    </div>
-</modal>
