add links for demo

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,7 @@
 <div id="background">
+   <button type="button" name="gotonewdemopage" (click)="goToNewDemoPage()">Go to Shop Page</button>
+   <button type="button" name="gotomainpage" (click)="goToMainPage()">Go to Shop Page</button>
+    
    <!-- ting_page - begin -->
    <div id="content" class="ting_page">
       <!-- mainBlock - begin -->
@@ -27,7 +30,7 @@
          &amp;lt;/div&amp;gt;
       </noscript>
       
-      <!--// TODO: mail content-->
+      <!--// TODO: main content-->
       <router-outlet></router-outlet>
 
       <tingcom-order-detail></tingcom-order-detail>
