--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="background">
    <button type="button" name="gotonewdemopage" (click)="goToNewDemoPage()">Go to Shop Page</button>
-   <button type="button" name="gotomainpage" (click)="goToMainPage()">Go to Shop Page</button>
+   <button type="button" name="gotomainpage" (click)="goToMainPage()">Go to Main Page</button>
     
    <!-- ting_page - begin -->
    <div id="content" class="ting_page">
