hide left banner on shop page

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -33,7 +33,9 @@
       <!--// TODO: main content-->
       <router-outlet></router-outlet>
 
-      <tingcom-order-detail></tingcom-order-detail>
+      <tingcom-order-detail *ngIf="showLeftBanner()"></tingcom-order-detail>
+
+
       <div class="clear"></div>
       <!-- mainBlock - end -->
    </div>
